data/derived/comb/progs/unify/prog1696.ml.out
Characters 149-153:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
